# zmk-setup-script

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml  setup.ps1
zmk/setup/: __init__.py  __main__.py  config.py  menu.py  repo.py  terminal.py  util.py
zmk_setup/: __init__.py  repo.py  yaml.py  zmk.py
