[project]
name = "zmk.setup"
description = "ZMK Firmware setup script"
authors = [
    {name = "Joel Spadin", email = "joelspadin@gmail.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dynamic = ["version"]

dependencies = [
    "requests ~= 2.28.1",
    "ruamel.yaml ~= 0.17.21",
    "typing_extensions"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pylint",
]

[project.scripts]
zmk-setup = "zmk.setup.__main__:main"

[project.urls]
repository = "https://github.com/joelspadin/zmk-setup-script"

[build-system]
requires = ["setuptools >= 43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["zmk.setup"]

[tool.setuptools.dynamic]
version = {attr = "zmk.setup.__version__"}

[tool.pylint.MASTER]
# Make sure the project root is in sys.path so pylint can import all the modules
init-hook="from pylint.config import find_default_config_files; import os, sys; sys.path.append(os.path.dirname(next(find_default_config_files())))"

[tool.pylint.'MESSAGES CONTROL']
disable="""
    too-many-arguments,
    too-few-public-methods,
"""

[tool.pylint.BASIC]
good-names="x,y,f,ex"

[tool.pylint.FORMAT]
max-line-length = 88
